complex-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: complex
  labels:
    app: complex
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: complex.com
      http:
        paths:
          - path: /complex-1
            pathType: Prefix
            backend:
              service:
                name: complex-1
                port:
                  number: 80
          - path: /complex-2
            pathType: Prefix
            backend:
              service:
                name: complex-2
                port:
                  number: 80
          - path: /complex-3
            pathType: Prefix
            backend:
              service:
                name: complex-3
                port:
                  number: 80
